shop.yml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: aws9-deploy-shop
  namespace: aws9c
spec:
  replicas: 1
  selector:
    matchLabels:
      color: blue
  template:
    metadata:
      labels:
        color: blue
    spec:
      containers:
        - name: aws9ctn-shop
          image: hub.aws9.pri/aws9/shop
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: aws9-svc-shop
  namespace: aws9c
spec:
  ports:
    - name: aws9-port-shop
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    color: blue
